add recycler view for home fragment_home.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="menu_home">Home</string>
     <string name="menu_registration">Registration</string>
     <string name="menu_login">Login</string>
+    <string name="content_description_hotel">hotels</string>
 </resources>
