--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,10 @@
     <string name="menu_registration">Registration</string>
     <string name="menu_login">Login</string>
     <string name="content_description_hotel">hotels</string>
+    <string name="content_description_chooseAccount">Choose Account Image</string>
+
+    <string name="choose_account_question">Select you want account type?</string>
+    <string name="service_account_type">Service Account</string>
+    <string name="customer_account_type">Customer Account</string>
+    <string name="next_button">Next</string>
 </resources>
