--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <string name="app_name">M A G U L A</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -28,7 +28,15 @@
     <string name="next_button">Next</string>
     <string name="address">Address</string>
     <string name="mobile_number">077–1234567</string>
-    <string name="register">Register</string>
-    <string name="cancel_button" tools:ignore="ButtonCase">cancel</string>
     <string name="price_per_plate">Price per plate</string>
+    <string name="first_name">First Name</string>
+    <string name="last_name">Last Name</string>
+    <string name="username">Username</string>
+    <string name="n_i_c">N I C</string>
+    <string name="contact_no">Contact No:</string>
+    <string name="password">Password</string>
+    <string name="re_password">Re-Password</string>
+    <string name="registration">registration</string>
+    <string name="cancel">Cancel</string>
+    <string name="email">Email</string>
 </resources>
