Change choose account type options

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,8 +10,8 @@
     <string name="menu_home">Home</string>
     <string name="menu_registration">Registration</string>
     <string name="menu_login">Login</string>
-    <string name="menu_service_account">Service Account</string>
-    <string name="menu_customer_account">Customer Account</string>
+    <string name="menu_service_account">Seller Account</string>
+    <string name="menu_customer_account">User Account</string>
     <string name="menu_plan">Plan</string>
 
 
@@ -26,11 +26,11 @@
     <string name="content_description_people">people</string>
 
     <string name="choose_account_question">Select you want account type?</string>
-    <string name="service_account_type">Service Account</string>
-    <string name="customer_account_type">Customer Account</string>
+    <string name="service_account_type">Seller Account</string>
+    <string name="customer_account_type">User Account</string>
 
     <string name="next_button">Next</string>
-    <string name="address">Address</string>
+    <string name="address">Email</string>
     <string name="mobile_number">077–1234567</string>
     <string name="price_per_plate">Price per plate</string>
     <string name="first_name">First Name</string>
